fix misalignment in PR view

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1674,8 +1674,18 @@
     align-items: center;
 
     .file {
-      flex: 1;
-      word-break: break-all;
+      // flex: 1;
+      // word-break: break-all;
+      display: inline-flex;
+      max-width: 100%;
+      min-width: 0;
+      .file-link {
+        max-width: fit-content;
+        min-width: 1ch;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
 
     .button {
@@ -3286,6 +3296,15 @@ td.blob-excerpt {
     @media (max-width: 480px) {
       position: static;
     }
+  }
+
+  .diff-file-header-actions {
+    flex-shrink: 0;
+  }
+
+  .diff-file-name {
+    flex: auto;
+    min-width: 0;
   }
 }
 
